--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+
+#自定义忽略文件
+**/mvnw
+**/mvnw.cmd
+**/.mvn
+.idea
+**/.gitignore
